# doc-rendering-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
scripts/: build_and_push.sh
src/doc_rendering_mcp_server/: __init__.py  __main__.py  models.py  server.py
src/doc_rendering_mcp_server/templates/: templates.yaml
src/doc_rendering_mcp_server/templates/css/: document.css
src/doc_rendering_mcp_server/templates/docx/: functional_spec.docx  sprint_report.docx  user_guide.docx
src/doc_rendering_mcp_server/templates/html/: base.html  functional_spec.html  sprint_plan.html  sprint_report.html  use_case.html  user_guide.html
src/doc_rendering_mcp_server/templates/markdown/: functional_spec.md  sprint_plan.md  sprint_report.md  use_case.md
src/doc_rendering_mcp_server/tools/: blob_tools.py  render_tools.py  template_tools.py
tests/: conftest.py  test_blob_tools.py  test_render_tools.py  test_template_tools.py
